tests/errors/sem_test14.py
# sem_test14.py 
test = 5 * "hey"
print(test)